<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GPS Camera</string>
    <string name="id_admob" translatable="false">ca-app-pub-1753284754637611~5680286569</string>
    <string name="facebook_id" translatable="false">48e4e8a9f87464475f16c7e9bb20f10d</string>
    <string name="facebook_id_token" translatable="false">1092729201991995</string>
    <string name="adjust_token_key" translatable="false">ki272v4hgwzk</string>
    <string name="DDMMYYYY">DD/MM/YYYY</string>
    <string name="Add">Add</string>
    <string name="Allfolder">Show Captured Images</string>
    <string name="ApertureValue">ApertureValue</string>
    <string name="BrightnessValue">BrightnessValue</string>
    <string name="CFAPattern">CFAPattern</string>
    <string name="Cancel">CANCEL</string>
    <string name="ColorSpace">ColorSpace</string>
    <string name="Compass_Direction">Compass Direction</string>
    <string name="ComponentsConfiguration">ComponentsConfiguration</string>
    <string name="CompressedBitsPerPixel">CompressedBitsPerPixel</string>
    <string name="Compression">Compression</string>
    <string name="Contrast">Contrast</string>
    <string name="Copyright">Copyright</string>
    <string name="DateTime">DateTime</string>
    <string name="Date_Format">Date Format</string>
    <string name="Dec_Degs">Dec Degs</string>
    <string name="Dec_Degs_Micro">Dec Degs Micro</string>
    <string name="Dec_Mins">Dec Mins</string>
    <string name="Dec_Mins_Secs">Dec Mins Secs</string>
    <string name="Deg_Mins_Secs">Deg Mins Secs</string>
    <string name="DeviceSettingDescription">DeviceSettingDescription</string>
    <string name="DigitalZoomRatio">DigitalZoomRatio</string>
    <string name="Displaying_Coordinates">Displaying Coordinates</string>
    <string name="ExposureBiasValue">ExposureBiasValue</string>
    <string name="ExposureIndex">ExposureIndex</string>
    <string name="ExposureMode">ExposureMode</string>
    <string name="ExposureProgram">ExposureProgram</string>
    <string name="ExposureTime">ExposureTime</string>
    <string name="ExternalStorage">ExternalStorage</string>
    <string name="FNumber">FNumber</string>
    <string name="FileNameFolderOptions">File Name &amp; Folder Options</string>
    <string name="Flash">Flash</string>
    <string name="FlashEnergy">FlashEnergy</string>
    <string name="FocalLength">FocalLength</string>
    <string name="FocalLengthIn35mmFilm">FocalLengthIn35mmFilm</string>
    <string name="FocalPlaneResolutionUnit">FocalPlaneResolutionUnit</string>
    <string name="FocalPlaneXResolution">FocalPlaneXResolution</string>
    <string name="FocalPlaneYResolution">FocalPlaneYResolution</string>
    <string name="GPSAltitude">GPSAltitude</string>
    <string name="GPSAltitudeRef">GPSAltitudeRef</string>
    <string name="GPSAreaInformation">GPSAreaInformation</string>
    <string name="GPSDOP">GPSDOP</string>
    <string name="GPSDateStamp">GPSDateStamp</string>
    <string name="GPSDifferential">GPSDifferential</string>
    <string name="GPSLatitude">GPSLatitude</string>
    <string name="GPSLatitudeRef">GPSLatitudeRef</string>
    <string name="GPSLongitude">GPSLongitude</string>
    <string name="GPSLongitudeRef">GPSLongitudeRef</string>
    <string name="GPSMeasureMode">GPSMeasureMode</string>
    <string name="GPSProcessingMethod">GPSProcessingMethod</string>
    <string name="GPSTimeStamp">GPSTimeStamp</string>
    <string name="GainControl">GainControl</string>
    <string name="ISOSpeedRatings">ISOSpeedRatings</string>
    <string name="ImageDescription">ImageDescription</string>
    <string name="Imperial_feet">Imperial - feet</string>
    <string name="Imperialfeet">Imperial - feet</string>
    <string name="Language">Change language</string>
    <string name="Latitude">Latitude</string>
    <string name="LightSource">LightSource</string>
    <string name="Longitude">Longitude</string>
    <string name="MGRS_USNG">MGRS, USNG</string>
    <string name="MMDDYYYY">MM/DD/YYYY</string>
    <string name="Magnetic_North">Magnetic North</string>
    <string name="Make">Make</string>
    <string name="MakerNote">MakerNote</string>
    <string name="MaxApertureValue">MaxApertureValue</string>
    <string name="MeteringMode">MeteringMode</string>
    <string name="Metric_meters">Metric - meters</string>
    <string name="Metricmeters">Metric - meters</string>
    <string name="Model">Model</string>
    <string name="OECF">OECF</string>
    <string name="PhotometricInterpretation">PhotometricInterpretation</string>
    <string name="RESULT_CANCELED">RESULT_CANCELED</string>
    <string name="RESULT_OK">RESULT_OK</string>
    <string name="Saturation">Saturation</string>
    <string name="Scanned">Scanned</string>
    <string name="SceneCaptureType">SceneCaptureType</string>
    <string name="SceneType">SceneType</string>
    <string name="SensingMethod">SensingMethod</string>
    <string name="Sharpness">Sharpness</string>
    <string name="ShutterSpeedValue">ShutterSpeedValue</string>
    <string name="Software">Software</string>
    <string name="SoundOff">Off</string>
    <string name="Soundon">On</string>
    <string name="SubSecTime">SubSecTime</string>
    <string name="SubSecTimeDigitized">SubSecTimeDigitized</string>
    <string name="SubSecTimeOriginal">SubSecTimeOriginal</string>
    <string name="TORCH">TORCH</string>
    <string name="UTM">UTM</string>
    <string name="Unit">Unit</string>
    <string name="WhiteBalance">WhiteBalance</string>
    <string name="YYYYMMDD">YYYY/MM/DD</string>
    <string name="Template1">Template1</string>
    <string name="Template2">Template2</string>
    <string name="Time_Format">Time Format</string>
    <string name="TochangeDestinationFileLocation">To change Destination File Location</string>
    <string name="True_North">True North</string>
    <string name="Setting">Settings</string>
    <string name="Share_App">Share App</string>
    <string name="PleasecheckyourInternet">Please check your Internet</string>
    <string name="accuracy">Accuracy</string>
    <string name="accuracy_high">High</string>
    <string name="accuracy_low">Low</string>
    <string name="accuracy_medium">Medium</string>
    <string name="accuracy_unknown">Unknown</string>
    <string name="accuracy_unreliable">Unreliable</string>
    <string name="add">Add</string>
    <string name="add_folder_empty_msg">Please add valid folder name</string>
    <string name="add_new_folder">Add New Folder</string>
    <string name="add_title">Add title</string>
    <string name="address">Address</string>
    <string name="advance_settings">Stamp Settings</string>
    <string name="alert_delete_message">Are you sure want to delete this logo?</string>
    <string name="alert_delete_title">Delete Logo</string>
    <string name="altitude">Altitude</string>
    <string name="area_label">Area:  </string>
    <string name="automatic">Automatic</string>
    <string name="background_color">Background Color</string>
    <string name="camera_Sound">Camera Sound</string>
    <string name="cansal">Cancel</string>
    <string name="choose_your_lan">Choose Your Preferred Language</string>
    <string name="compass">Compass</string>
    <string name="create_custom_format">Create custom format</string>
    <string name="create_date_time">Create Date &amp; Time</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="dec_degs">dec_degs</string>
    <string name="dec_degs_micro">dec_degs_micro</string>
    <string name="dec_mins">dec_mins</string>
    <string name="dec_mins_secs">dec_mins_secs</string>
    <string name="decimal">Decimal</string>
    <string name="deg_mins_secs">deg_mins_secs</string>
    <string name="delete">Delete</string>
    <string name="delete_date_msg">Are you sure want to delete the Date?</string>
    <string name="delete_location_msg">Are you sure want to delete the Location?</string>
    <string name="delete_note_msg">Are you sure want to delete the Note?</string>
    <string name="discard_message">Your changes have not been saved</string>
    <string name="dummy_folder_empty_msg">Folder name is already exist</string>
    <string name="edit_date_time">Edit Date &amp; Time</string>
    <string name="elevation">Elevation</string>
    <string name="empty_location_msg">Please enter valid latitude and longitude value</string>
    <string name="error_null_dates">Date should not be empty</string>
    <string name="feet">feet</string>
    <string name="folder_path">Folder Path</string>
    <string name="font_style">Font Style</string>
    <string name="gps_coordinates">GPS Coordinates</string>
    <string name="hours12">12 hours</string>
    <string name="hours24">24 hours</string>
    <string name="humidity">Humidity</string>
    <string name="hybrid">Hybrid</string>
    <string name="lat_lng">Lat/Long</string>
    <string name="latitude">Latitude</string>
    <string name="length_label" translatable="false">Length:  </string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <string name="line_3">Line 3</string>
    <string name="line_4">Line 4</string>
    <string name="loaction">Location settings are inadequate, and cannot be fixed here. Fix in Settings.</string>
    <string name="location">Location</string>
    <string name="logo">Logo</string>
    <string name="magnetic_accuracy_info">Your device\'s compass needs calibrating to improve its accuracy. This can be done by moving your device in a figure of 8 motion.1010Current accuracy:</string>
    <string name="magnetic_field">Magnetic Field</string>
    <string name="manual">Manual</string>
    <string name="map">Currant Location</string>
    <string name="map_type">Map Type</string>
    <string name="max_length_msg">Maximum number of characters reached</string>
    <string name="meters">meters</string>
    <string name="need_access">We need some access!</string>
    <string name="new_save_location">new_save_location</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="no_burst">no burst</string>
    <string name="no_internet_location">Looks like you are not connected to the internet.</string>
    <string name="no_internet_msg">It seems you are not connected with internet!!!</string>
    <string name="no_loction_list_dis">Add your preferred location manually and put it as geo stamp on your photos</string>
    <string name="normal">Normal</string>
    <string name="note_exist">Note already exist</string>
    <string name="note_title_exist">Title already exist</string>
    <string name="notes">Notes</string>
    <string name="notes_hastag">Note/Hashtag</string>
    <string name="numbering">Numbering</string>
    <string name="ok">Ok</string>
    <string name="photo">Photo</string>
    <string name="photo_resolution">Photo Resolution</string>
    <string name="please_enter_title">Please enter title</string>
    <string name="pos_bottom">Bottom</string>
    <string name="pos_top">Top</string>
    <string name="pressure">Pressure</string>
    <string name="recent_added_note">Recent Added Note</string>
    <string name="recent_used_logo">Recent Used Logo</string>
    <string name="satellite">Satellite</string>
    <string name="save_location_msg">Data will be changed according to the current location</string>
    <string name="selectLanguage">Select Language</string>
    <string name="select_folder">Select Folder</string>
    <string name="selectimagetag">Select Images Location</string>
    <string name="title">title</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="meter_m">Meter (m)</string>
    <string name="kilo_meter_km">Kilo Meter (km)</string>
    <string name="feet_ft">Feet (ft)</string>
    <string name="yard_yd">Yard (yd)</string>
    <string name="mile_mi">Mile (mi)</string>
    <string name="please_confirm_your_delete">Please confirm your delete</string>
</resources>