<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Setting2_text_color">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/mini"
        android:background="@drawable/r1">

        <TextView
            android:id="@+id/c1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center_horizontal"
            android:text="@string/FileNameFolderOptions"
            android:textColor="@color/black"
            android:textSize="28dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/c1"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/assistant_semibold"
            android:gravity="center"
            android:text="@string/TochangeDestinationFileLocation"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/aa" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/r1"
        android:gravity="center"
        android:text="@string/selectimagetag"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/add_folder_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_bottom"
        android:layout_below="@+id/txt"
        android:layout_marginBottom="@dimen/_10dp"
        android:paddingTop="@dimen/_8dp"
        android:paddingBottom="@dimen/_8dp" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_click"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#edf1f2"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/_100sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:text="@string/add_new_folder"
                android:textColor="@color/Setting2_text_color"
                android:textSize="20dp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/folder"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#edf1f2"
            app:cardCornerRadius="@dimen/_100sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:text="@string/Allfolder"
                android:textColor="@color/Setting2_text_color"
                android:textSize="20dp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>
