<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_dialog"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        >

        <ImageView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_delete"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/please_confirm_your_delete"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <LinearLayout
            android:id="@+id/layoutAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tvMessage"
            android:layout_marginTop="32dp"
            android:paddingHorizontal="12dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_cancel"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="#3D3D3D"
                android:textSize="14sp"
                android:paddingVertical="16dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginStart="8dp"
                android:textAllCaps="false"
                android:background="@drawable/bg_btn_delete"
                android:paddingVertical="16dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>